Fix the explore module to use Tephra.

--- a/explore/pom.xml
+++ b/explore/pom.xml
@@ -44,6 +44,14 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.continuuity.tephra</groupId>
+      <artifactId>tephra-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.continuuity.tephra</groupId>
+      <artifactId>tephra-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
     </dependency>
