Updated continuuity-api pom.xml to use proto instead of reactor-metadata

--- a/continuuity-api/pom.xml
+++ b/continuuity-api/pom.xml
@@ -33,7 +33,7 @@
   <dependencies>
     <dependency>
       <groupId>com.continuuity</groupId>
-      <artifactId>reactor-metadata</artifactId>
+      <artifactId>proto</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
