--- a/data-fabric/pom.xml
+++ b/data-fabric/pom.xml
@@ -39,7 +39,7 @@
     </dependency>
     <dependency>
       <groupId>com.continuuity</groupId>
-      <artifactId>reactor-metadata</artifactId>
+      <artifactId>proto</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
