--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -19,9 +19,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>reactor</artifactId>
+    <artifactId>parent</artifactId>
     <groupId>com.continuuity</groupId>
     <version>2.4.0-SNAPSHOT</version>
+    <relativePath>../parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -40,9 +41,7 @@
 
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
-      <artifactId>findbugs</artifactId>
-      <version>2.0.1</version>
-      <scope>compile</scope>
+      <artifactId>jsr305</artifactId>
     </dependency>
   </dependencies>
 
