--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -118,9 +118,10 @@
                   <version>${project.version}</version>
                   <groupId>${dist.deploy.groupId}</groupId>
                   <artifactId>continuuity</artifactId>
-                  <packaging>rpm</packaging>
+                  <packaging>noarch.rpm</packaging>
                   <generatePom>false</generatePom>
                   <file>${project.build.directory}/continuuity-${package.version}-1.noarch.rpm</file>
+                  <classifier>1</classifier>
                   <repositoryId>continuuity</repositoryId>
                   <url>${deploy.url}</url>
                 </configuration>
