Specify type and classifier for rpm package to work with nexus.

--- a/security/pom.xml
+++ b/security/pom.xml
@@ -173,9 +173,10 @@
                   <version>${project.version}</version>
                   <groupId>${dist.deploy.groupId}</groupId>
                   <artifactId>continuuity-${project.artifactId}</artifactId>
-                  <packaging>rpm</packaging>
+                  <packaging>noarch.rpm</packaging>
                   <generatePom>false</generatePom>
                   <file>${project.build.directory}/continuuity-${project.artifactId}-${package.version}-1.noarch.rpm</file>
+                  <classifier>1</classifier>
                   <repositoryId>continuuity</repositoryId>
                   <url>${deploy.url}</url>
                 </configuration>
