New explore jdbc module

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
     <module>security</module>
     <module>gateway</module>
     <module>explore-client</module>
+    <module>explore-jdbc</module>
     <module>explore</module>
     <module>continuuity-test</module>
     <module>reactor-master</module>
