--- a/continuuity-test/pom.xml
+++ b/continuuity-test/pom.xml
@@ -64,6 +64,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.continuuity</groupId>
+      <artifactId>explore-jdbc</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>compile</scope>
