--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -31,17 +31,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
+      <groupId>com.continuuity</groupId>
+      <artifactId>continuuity-api</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 
