--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -22,10 +22,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>parent</artifactId>
     <groupId>com.continuuity</groupId>
+    <artifactId>reactor</artifactId>
     <version>2.4.0-SNAPSHOT</version>
-    <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
   <artifactId>distributions</artifactId>
