--- a/explore-jdbc/pom.xml
+++ b/explore-jdbc/pom.xml
@@ -23,9 +23,8 @@
 
   <parent>
     <groupId>com.continuuity</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>reactor</artifactId>
     <version>2.4.0-SNAPSHOT</version>
-    <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
   <artifactId>explore-jdbc</artifactId>
@@ -42,6 +41,10 @@
       <groupId>com.continuuity</groupId>
       <artifactId>explore-client</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
 
