--- a/hbase-compat-0.96/pom.xml
+++ b/hbase-compat-0.96/pom.xml
@@ -23,9 +23,8 @@
 
   <parent>
     <groupId>com.continuuity</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>reactor</artifactId>
     <version>2.4.0-SNAPSHOT</version>
-    <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
   <artifactId>hbase-compat-0.96</artifactId>
@@ -75,6 +74,10 @@
     </dependency>
 
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.continuuity</groupId>
       <artifactId>data-fabric</artifactId>
       <version>${project.version}</version>
@@ -86,6 +89,12 @@
           <artifactId>hbase</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.continuuity</groupId>
+      <artifactId>common-unit-test</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
