--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -22,9 +22,8 @@
 
   <parent>
     <groupId>com.continuuity</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>reactor</artifactId>
     <version>2.4.0-SNAPSHOT</version>
-    <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
   <artifactId>kafka</artifactId>
