--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -18,13 +18,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>parent</artifactId>
-    <groupId>com.continuuity</groupId>
-    <version>2.4.0-SNAPSHOT</version>
-    <relativePath>../parent/pom.xml</relativePath>
-  </parent>
+
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>com.continuuity</groupId>
+    <artifactId>reactor</artifactId>
+    <version>2.4.0-SNAPSHOT</version>
+  </parent>
 
   <artifactId>proto</artifactId>
   <name>Continuuity Protocol</name>
