--- a/reactor-master/pom.xml
+++ b/reactor-master/pom.xml
@@ -23,9 +23,8 @@
 
   <parent>
     <groupId>com.continuuity</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>reactor</artifactId>
     <version>2.4.0-SNAPSHOT</version>
-    <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
   <artifactId>reactor-master</artifactId>
@@ -33,6 +32,15 @@
   <packaging>jar</packaging>
 
   <dependencies>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+
     <!-- Added to override the embedded guava class in hive-exec -->
     <dependency>
       <groupId>com.google.guava</groupId>
