--- a/singlenode/pom.xml
+++ b/singlenode/pom.xml
@@ -23,9 +23,8 @@
 
   <parent>
     <groupId>com.continuuity</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>reactor</artifactId>
     <version>2.4.0-SNAPSHOT</version>
-    <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
 
@@ -34,6 +33,15 @@
   <packaging>jar</packaging>
 
   <dependencies>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+
     <!-- Added to override the embedded guava class in hive-exec -->
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -177,7 +185,7 @@
                   <resources>
                     <!-- Copy Sandbox web-app -->
                     <resource>
-                      <directory>${project.parent.parent.basedir}/web-app/target/sandbox</directory>
+                      <directory>${project.parent.basedir}/web-app/target/sandbox</directory>
                       <targetPath>web-app/cloud</targetPath>
                     </resource>
                   </resources>
@@ -208,11 +216,11 @@
                       <targetPath>LICENSES</targetPath>
                     </resource>
                     <resource>
-                      <directory>${project.parent.parent.basedir}/docs/developer-guide/build-pdf</directory>
+                      <directory>${project.parent.basedir}/docs/developer-guide/build-pdf</directory>
                       <targetPath>docs</targetPath>
                     </resource>
                     <resource>
-                      <directory>${project.parent.parent.basedir}/distributions</directory>
+                      <directory>${project.parent.basedir}/distributions</directory>
                       <includes>
                         <include>VERSION</include>
                       </includes>
@@ -223,21 +231,21 @@
                       <targetPath>bin</targetPath>
                     </resource>
                     <resource>
-                      <directory>${project.parent.parent.basedir}/gateway/bin</directory>
+                      <directory>${project.parent.basedir}/gateway/bin</directory>
                       <targetPath>bin</targetPath>
                       <excludes>
                         <exclude>flume-client</exclude>
                       </excludes>
                     </resource>
                     <resource>
-                      <directory>${project.parent.parent.basedir}/data-fabric/bin</directory>
+                      <directory>${project.parent.basedir}/data-fabric/bin</directory>
                       <targetPath>bin</targetPath>
                       <includes>
                         <include>tx-debugger*</include>
                       </includes>
                     </resource>
                     <resource>
-                      <directory>${project.parent.parent.basedir}/explore/bin</directory>
+                      <directory>${project.parent.basedir}/explore/bin</directory>
                       <targetPath>bin</targetPath>
                       <includes>
                         <include>send-query*</include>
@@ -249,14 +257,14 @@
                       <targetPath>libexec</targetPath>
                     </resource>
                     <resource>
-                      <directory>${project.parent.parent.basedir}/continuuity-test/src/main/resources</directory>
+                      <directory>${project.parent.basedir}/continuuity-test/src/main/resources</directory>
                       <targetPath>libexec/bin</targetPath>
                       <includes>
                         <include>*.exe</include>
                       </includes>
                     </resource>
                     <resource>
-                      <directory>${project.parent.parent.basedir}/continuuity-test/src/main/resources</directory>
+                      <directory>${project.parent.basedir}/continuuity-test/src/main/resources</directory>
                       <targetPath>lib/native</targetPath>
                       <includes>
                         <include>*.dll</include>
@@ -264,24 +272,24 @@
                     </resource>
                     <!-- Copy continuuity-api jars -->
                     <resource>
-                      <directory>${project.parent.parent.basedir}/continuuity-api/target</directory>
+                      <directory>${project.parent.basedir}/continuuity-api/target</directory>
                       <includes>
                         <include>continuuity-api-${project.version}*.jar</include>
                       </includes>
                     </resource>
                     <!-- Copy web-app -->
                     <resource>
-                      <directory>${project.parent.parent.basedir}/web-app/target/local</directory>
+                      <directory>${project.parent.basedir}/web-app/target/local</directory>
                       <targetPath>web-app/local</targetPath>
                     </resource>
                     <!-- Copy continuuity-api javadocs -->
                     <resource>
-                      <directory>${project.parent.parent.basedir}/continuuity-api/target/apidocs</directory>
+                      <directory>${project.parent.basedir}/continuuity-api/target/apidocs</directory>
                       <targetPath>javadocs</targetPath>
                     </resource>
                     <!-- Copy examples. The assume the example is already built -->
                     <resource>
-                      <directory>${project.parent.parent.basedir}/examples</directory>
+                      <directory>${project.parent.basedir}/examples</directory>
                       <targetPath>examples</targetPath>
                       <includes>
                         <include>README*</include>
@@ -315,7 +323,7 @@
                   <useDefaultDelimiters>false</useDefaultDelimiters>
                   <resources>
                     <resource>
-                      <directory>${project.parent.parent.basedir}/examples</directory>
+                      <directory>${project.parent.basedir}/examples</directory>
                       <includes>
                         <include>deploy_pom.xml</include>
                       </includes>
