--- a/watchdog-api/pom.xml
+++ b/watchdog-api/pom.xml
@@ -23,13 +23,19 @@
 
   <parent>
     <groupId>com.continuuity</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>reactor</artifactId>
     <version>2.4.0-SNAPSHOT</version>
-    <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
   <artifactId>watchdog-api</artifactId>
   <name>Continuuity Watchdog API</name>
   <packaging>jar</packaging>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
