--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
       <id>continuuity</id>
       <url>https://repository.continuuity.com/content/repositories/snapshots/</url>
     </snapshotRepository>
+    <site>
+      <id>continuuity</id>
+      <url>http://www.continuuity.com</url>
+    </site>
   </distributionManagement>
 
   <properties>
@@ -1306,9 +1310,8 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-javadoc-plugin</artifactId>
-              <version>2.9</version>
+              <version>2.9.1</version>
               <configuration>
-                <excludePackageNames>*.internal.*</excludePackageNames>
                 <links>
                   <link>http://download.oracle.com/javase/6/docs/api/</link>
                 </links>
@@ -1882,8 +1885,7 @@
             <reports/>
           </reportSet>
           <reportSet>
-            <id>aggregate</id>
-            <inherited>false</inherited>
+            <id>site</id>
             <reports>
               <report>index</report>
               <report>mailing-list</report>
@@ -1898,9 +1900,8 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.9</version>
+        <version>2.9.1</version>
         <configuration>
-          <excludePackageNames>*.internal.*</excludePackageNames>
           <stylesheetfile>distributions/src/javadoc/stylesheet.css</stylesheetfile>
           <links>
             <link>http://download.oracle.com/javase/6/docs/api/</link>
