--- a/app-fabric/src/main/resources/UserMessages.properties
+++ b/app-fabric/src/main/resources/UserMessages.properties
@@ -36,4 +36,4 @@ bad-jar-attribute = Failed to extract the %s attribute from the JAR; make sure t
 flow-spec-desc = Your FlowSpecification is missing a "name" value
 flow-spec-name = Your FlowSpecification is missing a "description" value
 
-reset-fail = Failed to reset the Application Server (%s)
+reset-fail = Failed to reset the Application Platform (%s)
