http service is being initialized and handler is being called but running into a different error. Modified the HelloWorld app and using it to test

--- a/examples/HelloWorld/pom.xml
+++ b/examples/HelloWorld/pom.xml
@@ -32,4 +32,11 @@
     <properties>
         <app.main.class>com.continuuity.examples.helloworld.HelloWorld</app.main.class>
     </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.continuuity</groupId>
+      <artifactId>http</artifactId>
+    </dependency>
+  </dependencies>
 </project>
