--- a/explore-jdbc/pom.xml
+++ b/explore-jdbc/pom.xml
@@ -36,6 +36,76 @@
       <groupId>com.continuuity</groupId>
       <artifactId>common</artifactId>
       <version>${project.version}</version>
+      <exclusions>
+          <exclusion>
+              <groupId>org.apache.hadoop</groupId>
+              <artifactId>hadoop-common</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.twill</groupId>
+              <artifactId>twill-yarn</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.twill</groupId>
+              <artifactId>twill-core</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.twill</groupId>
+              <artifactId>twill-discovery-api</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.twill</groupId>
+              <artifactId>twill-discovery-core</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.twill</groupId>
+              <artifactId>twill-common</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.twill</groupId>
+              <artifactId>twill-api</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.twill</groupId>
+              <artifactId>twill-zookeeper</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.flume</groupId>
+              <artifactId>flume-ng-core</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.flume</groupId>
+              <artifactId>flume-ng-sdk</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm-all</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.avro</groupId>
+              <artifactId>avro-ipc</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>org.apache.thrift</groupId>
+              <artifactId>libthrift</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>com.continuuity</groupId>
+              <artifactId>continuuity-api</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>com.continuuity</groupId>
+              <artifactId>proto</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>commons-codec</groupId>
+              <artifactId>commons-codec</artifactId>
+          </exclusion>
+          <exclusion>
+              <groupId>com.continuuity</groupId>
+              <artifactId>http</artifactId>
+          </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.continuuity</groupId>
@@ -46,6 +116,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+        <groupId>com.continuuity</groupId>
+        <artifactId>http</artifactId>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -55,31 +130,28 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.14.1</version>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>2.1</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
+        <plugin>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>maven-bundle-plugin</artifactId>
+            <version>2.3.7</version>
+            <extensions>true</extensions>
             <configuration>
-              <createDependencyReducedPom>false</createDependencyReducedPom>
-              <filters>
-                <filter>
-                  <artifact>*:*</artifact>
-                  <excludes>
-                    <exclude>META-INF/LICENSE</exclude>
-                    <exclude>META-INF/license/*</exclude>
-                  </excludes>
-                </filter>
-              </filters>
+                <instructions>
+                    <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
+                    <Embed-Transitive>true</Embed-Transitive>
+                    <Embed-Directory>lib</Embed-Directory>
+                </instructions>
             </configuration>
-          </execution>
-        </executions>
-      </plugin>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>bundle</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
     </plugins>
   </build>
 
