--- a/explore-jdbc/pom.xml
+++ b/explore-jdbc/pom.xml
@@ -131,23 +131,27 @@
         <version>2.14.1</version>
       </plugin>
         <plugin>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>maven-bundle-plugin</artifactId>
-            <version>2.3.7</version>
-            <extensions>true</extensions>
-            <configuration>
-                <instructions>
-                    <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
-                    <Embed-Transitive>true</Embed-Transitive>
-                    <Embed-Directory>lib</Embed-Directory>
-                </instructions>
-            </configuration>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.1</version>
             <executions>
                 <execution>
                     <phase>package</phase>
                     <goals>
-                        <goal>bundle</goal>
+                        <goal>shade</goal>
                     </goals>
+                    <configuration>
+                        <createDependencyReducedPom>false</createDependencyReducedPom>
+                        <filters>
+                            <filter>
+                                <artifact>*:*</artifact>
+                                <excludes>
+                                    <exclude>META-INF/LICENSE</exclude>
+                                    <exclude>META-INF/license/*</exclude>
+                                </excludes>
+                            </filter>
+                        </filters>
+                    </configuration>
                 </execution>
             </executions>
         </plugin>
