--- a/continuuity-api/pom.xml
+++ b/continuuity-api/pom.xml
@@ -55,6 +55,10 @@
       <groupId>org.apache.twill</groupId>
       <artifactId>twill-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
