--- a/explore/pom.xml
+++ b/explore/pom.xml
@@ -34,6 +34,11 @@
   <dependencies>
     <dependency>
       <groupId>com.continuuity</groupId>
+      <artifactId>continuuity-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.continuuity</groupId>
       <artifactId>common</artifactId>
       <version>${project.version}</version>
     </dependency>
