--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
     <module>reactor-master</module>
     <module>web-app</module>
     <module>proto</module>
+    <module>client</module>
     <module>singlenode</module>
     <module>distributions</module>
   </modules>
