--- a/explore-client/pom.xml
+++ b/explore-client/pom.xml
@@ -39,6 +39,12 @@
     </dependency>
     <dependency>
       <groupId>co.cask.cdap</groupId>
+      <artifactId>common-unit-test</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>co.cask.cdap</groupId>
       <artifactId>proto</artifactId>
       <version>${project.version}</version>
     </dependency>
