--- a/explore-jdbc/pom.xml
+++ b/explore-jdbc/pom.xml
@@ -109,6 +109,12 @@
     </dependency>
     <dependency>
       <groupId>co.cask.cdap</groupId>
+      <artifactId>common-unit-test</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>co.cask.cdap</groupId>
       <artifactId>explore-client</artifactId>
       <version>${project.version}</version>
     </dependency>
