--- a/explore-client/pom.xml
+++ b/explore-client/pom.xml
@@ -28,7 +28,7 @@
   </parent>
 
   <artifactId>explore-client</artifactId>
-  <name>Continuuity Explore Client</name>
+  <name>Cask CDAP Explore Client</name>
   <packaging>jar</packaging>
 
   <dependencies>
