--- a/hbase-compat-0.96/pom.xml
+++ b/hbase-compat-0.96/pom.xml
@@ -28,7 +28,7 @@
   </parent>
 
   <artifactId>hbase-compat-0.96</artifactId>
-  <name>Continuuity HBase 0.96 Compatibility</name>
+  <name>Cask CDAP HBase 0.96 Compatibility</name>
   <packaging>jar</packaging>
 
   <dependencies>
