Rename packages and scripts to get rid of continuity.

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -146,7 +146,7 @@
                 </goals>
                 <configuration>
                   <target>
-                    <copy file="${project.build.directory}/dist/rpm/unfilter/continuuity-service" tofile="${stage.dir}/etc/rc.d/init.d/continuuity-router">
+                    <copy file="${project.build.directory}/dist/rpm/unfilter/cdap-service" tofile="${stage.dir}/etc/rc.d/init.d/cdap-router">
                       <filterSet>
                         <filter token="package.name" value="${project.artifactId}" />
                         <filter token="service.name" value="router" />
@@ -183,7 +183,7 @@
                 </goals>
                 <configuration>
                   <target>
-                    <copy file="${project.build.directory}/dist/deb/unfilter/continuuity-service" tofile="${stage.dir}-deb/etc/init.d/continuuity-router">
+                    <copy file="${project.build.directory}/dist/deb/unfilter/cdap-service" tofile="${stage.dir}-deb/etc/init.d/cdap-router">
                       <filterSet>
                         <filter token="package.name" value="${project.artifactId}" />
                         <filter token="service.name" value="router" />
@@ -224,10 +224,10 @@
                 <configuration>
                   <version>${project.version}</version>
                   <groupId>${dist.deploy.groupId}</groupId>
-                  <artifactId>continuuity-${project.artifactId}</artifactId>
+                  <artifactId>cdap-${project.artifactId}</artifactId>
                   <packaging>noarch.rpm</packaging>
                   <generatePom>false</generatePom>
-                  <file>${project.build.directory}/continuuity-${project.artifactId}-${package.version}-1.noarch.rpm</file>
+                  <file>${project.build.directory}/cdap-${project.artifactId}-${package.version}-1.noarch.rpm</file>
                   <classifier>1</classifier>
                   <repositoryId>continuuity</repositoryId>
                   <url>${deploy.url}</url>
@@ -265,10 +265,10 @@
                 <configuration>
                   <version>${project.version}</version>
                   <groupId>${dist.deploy.groupId}</groupId>
-                  <artifactId>continuuity-${project.artifactId}</artifactId>
+                  <artifactId>cdap-${project.artifactId}</artifactId>
                   <packaging>deb</packaging>
                   <generatePom>false</generatePom>
-                  <file>${project.build.directory}/continuuity-${project.artifactId}_${package.version}-1_all.deb</file>
+                  <file>${project.build.directory}/cdap-${project.artifactId}_${package.version}-1_all.deb</file>
                   <repositoryId>continuuity</repositoryId>
                   <url>${deploy.url}</url>
                 </configuration>
@@ -305,10 +305,10 @@
                 <configuration>
                   <version>${project.version}</version>
                   <groupId>${dist.deploy.groupId}</groupId>
-                  <artifactId>continuuity-${project.artifactId}</artifactId>
+                  <artifactId>cdap-${project.artifactId}</artifactId>
                   <packaging>tar.gz</packaging>
                   <generatePom>false</generatePom>
-                  <file>${project.build.directory}/continuuity-${project.artifactId}-${package.version}.tar.gz</file>
+                  <file>${project.build.directory}/cdap-${project.artifactId}-${package.version}.tar.gz</file>
                   <repositoryId>continuuity</repositoryId>
                   <url>${deploy.url}</url>
                 </configuration>
