--- a/master/pom.xml
+++ b/master/pom.xml
@@ -128,7 +128,7 @@
     <profile>
       <id>dist</id>
       <properties>
-        <package.depends>--depends continuuity --depends continuuity-hbase-compat-0.94 --depends continuuity-hbase-compat-0.96</package.depends>
+        <package.depends>--depends cdap --depends cdap-hbase-compat-0.94 --depends cdap-hbase-compat-0.96</package.depends>
       </properties>
       <build>
         <plugins>
@@ -230,10 +230,10 @@
                 <configuration>
                   <version>${project.version}</version>
                   <groupId>${dist.deploy.groupId}</groupId>
-                  <artifactId>continuuity-${project.artifactId}</artifactId>
+                  <artifactId>cdap-${project.artifactId}</artifactId>
                   <packaging>noarch.rpm</packaging>
                   <generatePom>false</generatePom>
-                  <file>${project.build.directory}/continuuity-${project.artifactId}-${package.version}-1.noarch.rpm</file>
+                  <file>${project.build.directory}/cdap-${project.artifactId}-${package.version}-1.noarch.rpm</file>
                   <classifier>1</classifier>
                   <repositoryId>continuuity</repositoryId>
                   <url>${deploy.url}</url>
@@ -271,10 +271,10 @@
                 <configuration>
                   <version>${project.version}</version>
                   <groupId>${dist.deploy.groupId}</groupId>
-                  <artifactId>continuuity-${project.artifactId}</artifactId>
+                  <artifactId>cdap-${project.artifactId}</artifactId>
                   <packaging>deb</packaging>
                   <generatePom>false</generatePom>
-                  <file>${project.build.directory}/continuuity-${project.artifactId}_${package.version}-1_all.deb</file>
+                  <file>${project.build.directory}/cdap-${project.artifactId}_${package.version}-1_all.deb</file>
                   <repositoryId>continuuity</repositoryId>
                   <url>${deploy.url}</url>
                 </configuration>
@@ -311,10 +311,10 @@
                 <configuration>
                   <version>${project.version}</version>
                   <groupId>${dist.deploy.groupId}</groupId>
-                  <artifactId>continuuity-${project.artifactId}</artifactId>
+                  <artifactId>cdap-${project.artifactId}</artifactId>
                   <packaging>tar.gz</packaging>
                   <generatePom>false</generatePom>
-                  <file>${project.build.directory}/continuuity-${project.artifactId}-${package.version}.tar.gz</file>
+                  <file>${project.build.directory}/cdap-${project.artifactId}-${package.version}.tar.gz</file>
                   <repositoryId>continuuity</repositoryId>
                   <url>${deploy.url}</url>
                 </configuration>
