--- a/client/pom.xml
+++ b/client/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <artifactId>client</artifactId>
-  <name>Cask CDAP Reactor Java Client</name>
+  <name>Cask CDAP Java Client</name>
 
   <dependencies>
     <dependency>
@@ -49,6 +49,12 @@
     <dependency>
       <groupId>co.cask.cdap</groupId>
       <artifactId>unit-test</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>co.cask.cdap</groupId>
+      <artifactId>common-unit-test</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
