Point hive exec to the cdap repo in nexus

--- a/explore/pom.xml
+++ b/explore/pom.xml
@@ -72,7 +72,7 @@
       <artifactId>hive-metastore</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.continuuity</groupId>
+      <groupId>co.cask.cdap</groupId>
       <artifactId>hive-exec</artifactId>
     </dependency>
     <dependency>
