--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
     <async.http.version>1.7.18</async.http.version>
     <avro.version>1.6.2</avro.version>
     <commons.codec.version>1.6</commons.codec.version>
-    <continuuity.hive.version>0.13.0-continuuity-2.4.0-SNAPSHOT</continuuity.hive.version>
+    <cdap.hive.version>0.13.0</cdap.hive.version>
     <findbugs.jsr305.version>2.0.1</findbugs.jsr305.version>
     <flume.version>1.2.0</flume.version>
     <geronimo.version>2.0.0</geronimo.version>
@@ -968,9 +968,9 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>com.continuuity</groupId>
+        <groupId>co.cask.cdap</groupId>
         <artifactId>hive-exec</artifactId>
-        <version>${continuuity.hive.version}</version>
+        <version>${cdap.hive.version}</version>
         <exclusions>
           <exclusion>
             <groupId>com.google.guava</groupId>
