--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,11 @@
   <artifactId>cdap</artifactId>
   <version>2.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Cask CDAP Reactor</name>
+  <name>Cask DAP</name>
 
   <organization>
     <name>Cask</name>
-    <url>http://www.cask.co</url>
+    <url>http://cask.co</url>
   </organization>
 
   <repositories>
@@ -66,7 +66,7 @@
     </snapshotRepository>
     <site>
       <id>continuuity</id>
-      <url>http://www.continuuity.com</url>
+      <url>http://continuuity.com</url>
     </site>
   </distributionManagement>
 
@@ -1324,7 +1324,7 @@
                   <link>http://download.oracle.com/javase/6/docs/api/</link>
                 </links>
                 <bottom>
-                  <![CDATA[Copyright &#169; ${package.build.year} <a href="http://www.cask.co">Cask Inc.</a>. <a href="http://www.apache.org/licenses/LICENSE-2.0">Licensed under the Apache License, Version 2.0</a>.]]>
+                  <![CDATA[Copyright &#169; $\{package.build.year} <a href="http://cask.co">Cask, Inc.</a> Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.]]>
                 </bottom>
               </configuration>
               <executions>
@@ -1527,7 +1527,7 @@
                 </goals>
                 <configuration>
                   <name>package.version</name>
-                  <value>${project.version}</value>
+                  <value>$\{project.version}</value>
                   <regex>-SNAPSHOT</regex>
                   <replacement>.${package.build.timestamp}</replacement>
                   <failIfNoMatch>false</failIfNoMatch>
@@ -1782,7 +1782,7 @@
                       --name "cdap-${project.artifactId}"
                       --vendor "Cask Inc."
                       --maintainer "support@cask.co"
-                      --license "Copyright ${package.build.year} Cask,Inc. Licensed under the Apache License, Version 2.0."
+                      --license "Copyright ${package.build.year} Cask, Inc. Licensed under the Apache License, Version 2.0."
                       --description "Component of Cask CDAP"
                       --category misc
                       -s dir
@@ -1791,7 +1791,7 @@
                       --directories "/opt/cdap/${project.artifactId}"
                       --version "${package.version}"
                       --architecture all
-                      --url "http://www.cask.co"
+                      --url "http://cask.co"
                       --template-value "project=${project.artifactId}"
                       --after-install "${project.parent.basedir}/distributions/src/rpm/scripts/postinst"
                       --before-remove "${project.parent.basedir}/distributions/src/rpm/scripts/prerm"
@@ -1833,7 +1833,7 @@
                       --name "cdap-${project.artifactId}"
                       --vendor "Cask Inc."
                       --maintainer "support@cask.co"
-                      --license "Copyright ${package.build.year} Cask,Inc. Licensed under the Apache License, Version 2.0."
+                      --license "Copyright ${package.build.year} Cask, Inc. Licensed under the Apache License, Version 2.0."
                       --description "Component of Cask CDAP"
                       --category misc
                       -s dir
@@ -1842,7 +1842,7 @@
                       --directories "/opt/cdap/${project.artifactId}"
                       --version "${package.version}"
                       --architecture all
-                      --url "http://www.cask.co"
+                      --url "http://cask.co"
                       --template-value "project=${project.artifactId}"
                       --after-install "${project.parent.basedir}/distributions/src/debian/scripts/postinst"
                       --before-remove "${project.parent.basedir}/distributions/src/debian/scripts/prerm"
@@ -1928,7 +1928,7 @@
             <link>http://download.oracle.com/javase/6/docs/api/</link>
           </links>
           <bottom>
-            <![CDATA[Copyright &#169; ${package.build.year} <a href="http://www.cask.co">Cask Inc.</a>. <a href="http://www.apache.org/licenses/LICENSE-2.0">Licensed under the Apache License, Version 2.0</a>.]]>
+            <![CDATA[Copyright &#169; $\{package.build.year} <a href="http://cask.co">Cask, Inc.</a> Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.]]>
           </bottom>
         </configuration>
         <reportSets>
