--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
     <async.http.version>1.7.18</async.http.version>
     <avro.version>1.6.2</avro.version>
     <commons.codec.version>1.6</commons.codec.version>
+    <concurrent.trees.version>2.4.0</concurrent.trees.version>
     <continuuity.hive.version>0.13.0-continuuity-2.4.0-SNAPSHOT</continuuity.hive.version>
     <findbugs.jsr305.version>2.0.1</findbugs.jsr305.version>
     <flume.version>1.2.0</flume.version>
@@ -93,6 +94,7 @@
     <http.component.version>4.2.5</http.component.version>
     <jetty.version>6.1.22</jetty.version>
     <jetty8.version>8.1.15.v20140411</jetty8.version>
+    <jline.version>2.12</jline.version>
     <junit.version>4.11</junit.version>
     <kafka.version>0.8.0</kafka.version>
     <leveldb.version>0.6</leveldb.version>
@@ -995,6 +997,16 @@
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>${servlet.api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>jline</groupId>
+        <artifactId>jline</artifactId>
+        <version>${jline.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.googlecode.concurrent-trees</groupId>
+        <artifactId>concurrent-trees</artifactId>
+        <version>${concurrent.trees.version}</version>
       </dependency>
 
       <dependency>
