--- a/singlenode/pom.xml
+++ b/singlenode/pom.xml
@@ -281,7 +281,7 @@
                       <directory>${project.parent.basedir}/cli/bin</directory>
                       <targetPath>bin</targetPath>
                       <includes>
-                        <include>cdap-cli</include>
+                        <include>cdap-cli.sh</include>
                         <include>cdap-cli.bat</include>
                       </includes>
                     </resource>
@@ -344,7 +344,7 @@
                 <configuration>
                   <target>
                     <copy file="${stage.opt.dir}/bin/cli-${project.version}.jar" tofile="${stage.opt.dir}/bin/cdap-cli.jar" />
-                    <chmod file="${stage.opt.dir}/bin/cdap-cli" perm="755"/>
+                    <chmod file="${stage.opt.dir}/bin/cdap-cli.sh" perm="755"/>
                     <chmod file="${stage.opt.dir}/bin/cdap-cli.bat" perm="755"/>
                   </target>
                 </configuration>
