--- a/examples/TrafficAnalytics/pom.xml
+++ b/examples/TrafficAnalytics/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>examples</artifactId>
     <groupId>co.cask.cdap</groupId>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>2.4.0-rc1</version>
   </parent>
 
   <artifactId>TrafficAnalytics</artifactId>
