Reworked CLI framework to make it simpler to define new commands

--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -55,6 +55,12 @@
       <groupId>com.googlecode.concurrent-trees</groupId>
       <artifactId>concurrent-trees</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
